Fix skip profile menu appearing behind your work box
Fixes #2359

--- a/public/popup.css
+++ b/public/popup.css
@@ -321,6 +321,8 @@
   justify-content: space-evenly;
   display: flex;
   position: relative;
+
+  z-index: 1;
 }
 .sbControlsMenu-item {
   display: flex;
